# The-Internet-We-Deserve

./: Cargo.toml
meshnet/: main.py
meshnet/mesh/: crypto.py  node.py  sharding.py  transport.py
src/: crypto.rs  main.rs  messaging.rs  shard.rs
