[package]
name = "meshnet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }           # Async networking
libp2p = { version = "0.53", features = ["tcp-tokio", "dns", "mdns", "websocket"] } # P2P layer
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sodiumoxide = "0.2"                                      # Crypto (NaCl libs)
reed-solomon-erasure = "5"                               # For sharding
rand = "0.8"                                             # Randomness
anyhow = "1.0"                                           # Error handling
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }        # CLI parsing
